--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Hi Welcome to Jyosat webpage
+description: Hang on !!! Watch the space for my project updates...
